# learn-python

./: LICENSE  README.md  install-poetry.sh  pyproject.toml
.devcontainer/: devcontainer.json
notebooks/: README.md  control_flow.ipynb  data_types.ipynb  dictionaries.ipynb  exceptions.ipynb  functions.ipynb  importing.ipynb  intro.ipynb  lists.ipynb  oop.ipynb  operators.ipynb  sets.ipynb  strings.ipynb  tuples.ipynb  type_conversions.ipynb  user_input.ipynb  variables.ipynb
notebooks/lang/es/: README.md  control_flow.ipynb  data_types.ipynb  dictionaries.ipynb  exceptions.ipynb  functions.ipynb  importing.ipynb  intro.ipynb  lists.ipynb  oop.ipynb  operators.ipynb  sets.ipynb  strings.ipynb  tuples.ipynb  type_conversions.ipynb  user_input.ipynb  variables.ipynb
notebooks/lang/es/my_package/: my_module.py
